@@ -13,7 +13,15 @@
 	  warnings
 	* cconv.c (cob_load_collation), common.c, intrinisic.c (cob_intr_random),
 	  termio.c: minor adjustments to fix compiler warnings
-
+	* fileio.c (copy_fcd_to_file): fixed memory issues with writing to assign
+	  and select name
+	* fileio.c (save_status): don't synch directly after open or close
+	* fileio.c (cob_file_open), (open_next): include binary in open flags if
+	  cobsetptr->cob_unix_lf is set
+	* fileio.c (open_next): set binary file mode, minor refactoring
+	* fileio.c (cob_file_close) [_WIN32]: don't try to unlock invalid file
+	  handles; mark file descriptor as closed when file handle was closed
+	
 2023-02-06  Simon Sobisch <simonsobisch@gnu.org>
 
 	* numeric.c (cob_decimal_get_packed, cob_decimal_get_display):
